--- a/Главная.css
+++ b/Главная.css
@@ -341,3 +341,18 @@
     margin-left: calc(((100% - 340px) / 2) + 500px);
   }
 }
+
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
+
+body {
+  background-color: #121212;
+}
+
+#clock {
+  font-family: 'Orbitron', sans-serif;
+  color: #66ff99;
+  font-size: 56px;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
