--- a/Главная.css
+++ b/Главная.css
@@ -350,7 +350,7 @@ body {
 
 #clock {
   font-family: 'Orbitron', sans-serif;
-  color: #66ff99;
+  color: #8b00ff;
   font-size: 56px;
   text-align: center;
   padding-top: 40px;
